--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,9 @@
 {
-	"prefix": ".",
-	"ownerNumber": ["62887435047326@s.whatsapp.net","0@s.whatsapp.net","62887435047326@s.whatsapp.net","62887435047326@s.whatsapp.net"],
-	"targetpc" : "62887435047326",
-	"ownerNumberr": "+62887435047326",
-	"cr": "@zeeoneofc",
+	"prefix": "!",
+	"ownerNumber": ["6282228324101@s.whatsapp.net","0@s.whatsapp.net","6282228324101@s.whatsapp.net","6282228324101@s.whatsapp.net"],
+	"targetpc" : "6282228324101",
+	"ownerNumberr": "+6282228324101",
+	"cr": "@radityaaa",
 	"baileys_version": "3.5.2",
 	"bot_version": "0.0.7",
 	"youtube":"bit.ly/ytzeeoneofc",
@@ -13,11 +13,11 @@
 	"instagram": "bit.ly/igzeeoneofc",
 	"github": "bit.ly/gtzeeoneofc",	
 	"ownername": "zeeoneofc",
-	"botname":"ΛᄂPΉΛ BӨƬ",
-	"body":"SUB YT ZEEONE OFC",
+	"botname":"RADITS BӨƬ",
+	"body":"SUB YT RADITS",
 	"source_url":"https://youtu.be/2rWbjrDIAyA",
 	"img":"https://e.top4top.io/p_2010lz9211.jpg",
 	"thumbnail":"Alphabot.jpg", 
 	"fakethumbnail":"Alphabot.jpg", 
-	"fake": " 「  Alphabot  」\nCreated By @zeeoneofc "
+	"fake": " 「  Raditzbot  」\nCreated By @raditzz "
 }
